--- a/workspace/PCA.ipynb
+++ b/workspace/PCA.ipynb
@@ -2,6 +2,13 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/TariqAlhathloul/machine_learning_classification/blob/main/workspace/PCA.ipynb)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "d_VMK5_TYu5S"
       },
